[package]
name = "ur-grue"
description = "z-machine interpreter library."
version = "0.1.0"
authors = ["crawlingChaos"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/crawlingChaos/ur-grue"
repository = "https://github.com/crawlingChaos/ur-grue"
readme = "README.md"

[dependencies]
